--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-<meta http-equiv="refresh" content="0; url= https://api.xkx.me/tc/" />
+<meta http-equiv="refresh" content="0; url= https://tc.xkx.me/" />
 </head>
